# crusty-letter

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/crusty_paper/: joke.rs  meme.rs  mod.rs  news.rs  quote.rs
