[package]
name = "crusty-letter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "*", features = ["serde_derive"] }
serde_json = "*"
reqwest = { version = "*", features = ["blocking"] }
chrono = "0.4.19"
pdf-canvas = "*"
genpdf = "0.2.0"

